@@ -647,21 +647,24 @@ INSERT INTO `table_columns` VALUES ('graph_templates_item',5,'graph_template_id'
 INSERT INTO `table_columns` VALUES ('graph_templates_item',6,'task_item_id','int(10) unsigned','NO','MUL','0','');
 INSERT INTO `table_columns` VALUES ('graph_templates_item',7,'color_id','mediumint(8) unsigned','NO','MUL','0','');
 INSERT INTO `table_columns` VALUES ('graph_templates_item',8,'alpha','char(2)','YES','','FF','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',9,'graph_type_id','tinyint(3) unsigned','NO','','0','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',10,'line_width','decimal(4,2)','YES','','0.00','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',11,'dashes','varchar(20)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',12,'dash_offset','mediumint(4)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',13,'cdef_id','mediumint(8) unsigned','NO','MUL','0','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',14,'vdef_id','mediumint(8) unsigned','NO','MUL','0','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',15,'shift','char(2)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',16,'consolidation_function_id','tinyint(3) unsigned','NO','','0','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',17,'textalign','varchar(10)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',18,'text_format','varchar(255)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',19,'legend','varchar(30)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',20,'value','varchar(255)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',21,'hard_return','char(2)','YES','',NULL,'');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',22,'gprint_id','mediumint(8) unsigned','NO','MUL','0','');
-INSERT INTO `table_columns` VALUES ('graph_templates_item',23,'sequence','mediumint(8) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',9,'color2_id','mediumint(8) unsigned','NO','MUL','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',10,'alpha2','char(2)','YES','MUL','FF','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',11,'gradheight','tinyint(4)','NO','','50','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',12,'graph_type_id','tinyint(3) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',13,'line_width','decimal(4,2)','YES','','0.00','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',14,'dashes','varchar(20)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',15,'dash_offset','mediumint(4)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',16,'cdef_id','mediumint(8) unsigned','NO','MUL','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',17,'vdef_id','mediumint(8) unsigned','NO','MUL','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',18,'shift','char(2)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',19,'consolidation_function_id','tinyint(3) unsigned','NO','','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',20,'textalign','varchar(10)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',21,'text_format','varchar(255)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',22,'legend','varchar(30)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',23,'value','varchar(255)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',24,'hard_return','char(2)','YES','',NULL,'');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',25,'gprint_id','mediumint(8) unsigned','NO','MUL','0','');
+INSERT INTO `table_columns` VALUES ('graph_templates_item',26,'sequence','mediumint(8) unsigned','NO','','0','');
 INSERT INTO `table_columns` VALUES ('graph_tree',1,'id','smallint(5) unsigned','NO','PRI',NULL,'auto_increment');
 INSERT INTO `table_columns` VALUES ('graph_tree',2,'enabled','char(2)','YES','','on','');
 INSERT INTO `table_columns` VALUES ('graph_tree',3,'locked','tinyint(3) unsigned','YES','','0','');
